================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0

- Updated bundled LibEventHandler version to 1.2.97 (AddOnVersion: 1297).
- Deleted backward compatibility support for Update 29

Version 1.6.84 : by Calamath
[LorePlay]:Blackwood support
- Improved location recognition engine for Senchal type cities where no city subzones are defined.
- In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
- Adjusted location database of Understone Keep in Markarth.
- Updated API version to 100035 (ESO 7.0.x : Blackwood)
- Updated bundled LibEventHandler version to 1.2.95 (AddOnVersion: 1295).
- Backward compatibility support for Update 29
[LoreWear]
- Addressed API changes regarding GameplayActorCategory.
[IdleEmotes]
- Adjusted the Camera Spin Disabler feature to enable the preview button in the endeavor seal store introduced in Update 30.

Version 1.6.83 : by Calamath
[HotFix]
- Fixed a bug that the in-game outfit preview feature did not work in daily login reward scene and eso plus offer scene when using the Camera Spin Disabler.

Version 1.6.82 : by Calamath
[LorePlay]:Flames of Ambition support
- Adjusted location database of Vivec City and Alinor Royal Palace.
- Updated API version to 100034 (ESO 6.3.x : Flames of Ambition)
- Updated embedded LibEventHandler version to 1.2.94 (AddOnVersion: 1294).
[IdleEmotes]
- Optimized the Camera Spin Disabler feature for compatibility with the inventory furniture preview introduced in update 29.

Version 1.6.81 : by Calamath
[HotFix]